Feature / Metadata updates (#15)
* Add model stubs to flow model nodes

* Use "head" and "tail" to describe flow edges

* Use type descriptors for model parameters

* Example JSON for two REST calls (create flow and search)

* Update tests to match metadata changes

* Use type descriptor instead of full model parameter for flow model stubs

* Describe semantics for Value objects in type.proto

* Standardise behaviour of metadata helper classes

* Fix JDBC DAL write batch impl to handle incoming values using the new metadata helpers

* Update doc comments for date-time values

* Use fixed ints for hi and lo parts of object id

* Use hasType() to check for type descriptors in primitive values

* Rename attrValue as searchValue in SearchTerm

* Fix typos in sample search JSON

* Update README with instructions on using the sample metadata